sogo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sogo
  namespace: sogo
  labels:
    app: sogo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: sogo
