sogo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sogo
  namespace: sogo
  annotations:
    cert-manager.io/cluster-issuer: prod-cluster-issuer
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - post.hensen.io
    secretName: sogo-tls
  rules:
  - host: post.hensen.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sogo
            port:
              number: 80
